force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/Best_Product_Fit_Identified__c.field-meta.xml
<CustomField>
    <fullName>Best_Product_Fit_Identified__c</fullName>
    <label>Best Product Fit Identified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>