force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/Business_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Business_Challenges__c</fullName>
    <label>Business Challenges</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>