force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/Decision_Maker_Identified__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Identified__c</fullName>
    <label>Decision Maker Identified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>