force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/Features_Benefits_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Features_Benefits_Discussed__c</fullName>
    <label>Features and Benefits Discussed</label>
    <type>LongTextArea</type>
    <length>1500</length>
</CustomField>